change view level session to project

--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -15,24 +15,12 @@
         <ul id="menu">
           <li class="samvera">
             <a href="/" >
-              <span class="description">sessionizer home</span><br />
-              <span class="samvera">Samvera</span> Connect
+              <span class="description">Projects Home</span><br />
+              <span class="samvera">CodeSwitch</span>
             </a>
           </li>
 
-          <li class="samvera-web">
-            <a href="https://samvera.org/" >
-              <span class="description">web home</span><br />
-              <span class="samvera">Samvera</span>
-            </a>
-          </li>
 
-          <li class="wiki">
-            <a href="<%= t('wiki') %>">
-              <span class="description">wiki</span><br />
-              <span class="samvera">Samvera</span> wiki
-            </a>
-          </li>
         </ul>
         <div class="clearboth"></div>
 
